# coolctl

./: .gitignore  Cargo.toml  PKGBUILD  SPEC.md  coolctl.service  coolctl.toml.example
src/: config.rs  cpufreq.rs  main.rs  profile.rs  thermal.rs  throttle.rs  turbo.rs
