[package]
name = "coolctl"
version = "0.2.0"
edition = "2021"
description = "CPU thermal throttle daemon"
license = "MIT"

[dependencies]
serde = { version = "1", features = ["derive"] }
toml = "0.8"
log = "0.4"
env_logger = "0.11"
nix = { version = "0.29", features = ["signal", "fs"] }
thiserror = "2"

[profile.release]
lto = true
strip = true
